# dioxus-basic

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  input.css  package-lock.json  package.json  tailwind.config.js
src/: app.rs  main.css  main.rs
src/components/: banner.rs  counter.rs  mod.rs  slide_show.rs
src/pages/: home_page.rs
src/styles/: banner_style.rs  main.css  mod.rs  slide_show_style.rs
